# projectD_DRF

./: pyproject.toml
config/: settings.py  urls.py
main/: models.py  serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_payments.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: get_pay.py
users/migrations/: 0001_initial.py  0002_payments.py
